--- a/docs/r2.md
+++ b/docs/r2.md
@@ -1,13 +1,19 @@
+---
+title: Test
+layout: Post
+permalink: /ExtensionList/
+---
 ![Thunderbird icon](./images/Thunderbird-icon.png)
 
 # ExtensionList
+
 
 
 | Id      | Name | Description | Ver | Date | Users | Source | XPI | Homepage |
 | ---- | --- | --- | --- | --- | --- | --- | --- | --- |
 | 30 | Name | Description | Ver | Date | Users | Source | XPI | Homepage |
 | 100 | Name | Description | Ver | Date | Users | Source | XPI | Homepage |
-| 130 | Name | Description | Ver | Date | Users | Source | XPI | Homepage |
+
 
 
 
