--- a/docs/r2.md
+++ b/docs/r2.md
@@ -1,11 +1,12 @@
 ---
 title: Test
 layout: Post
-permalink: /ExtensionList/
+permalink: /EL/
 ---
 ![Thunderbird icon](./images/Thunderbird-icon.png)
 
-# ExtensionList
+# EL
+
 R2.md
 
 
