--- a/docs/r2.md
+++ b/docs/r2.md
@@ -1,6 +1,6 @@
 ![Thunderbird icon](./images/Thunderbird-icon.png)
 
-# EL
+# Extensions
 
 R2.md
 
@@ -13,22 +13,6 @@ R2.md
 
 
 
-|-----------------+------------+-----------------+----------------|
-| Default aligned |Left aligned| Center aligned  | Right aligned  |
-|-----------------|:-----------|:---------------:|---------------:|
-| First body part |Second cell | Third cell      | fourth cell    |
-| Second line     |foo         | **strong**      | baz            |
-| Third line      |quux        | baz             | bar            |
-|-----------------+------------+-----------------+----------------|
-| Second body     |            |                 |                |
-| 2 line          |            |                 |                |
-|=================+============+=================+================|
-| Footer row      |            |                 |                |
-|-----------------+------------+-----------------+----------------|
-
-
-
-
 [index](./index.html)
 
 [readme](./README1.md)
@@ -36,18 +20,3 @@ R2.md
 [readme2](./README1.html)
 
 Test
-
-<html>
-<head>
-<style>
-.tablelines table, .tablelines td, .tablelines th {
-        border: 1px solid black;
-        }
-
-table {
-	border: 2px solid red;
-	border-collapse: collapse;
-}
-</style>
-</head>
-</html>
