--- a/xall/x68/11005-shrunked-image-resizer/src/locale/fr/shrunked.dtd
+++ b/xall/x68/11005-shrunked-image-resizer/src/locale/fr/shrunked.dtd
@@ -23,9 +23,9 @@
 <!ENTITY shrunked-advanced.label "Avancé">
 <!ENTITY shrunked-advanced.resample.label "Rééchantillonner les images en utilisant JavaScript">
 <!ENTITY shrunked-advanced.exif.label "Transfert des données EXIF">
-<!ENTITY shrunked-advanced.orient.label "Roation automatique des images">
+<!ENTITY shrunked-advanced.orient.label "Rotation automatique des images">
 <!ENTITY shrunked-advanced.gps.label "Transférer les données GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Messages d'erreur">
-<!ENTITY shrunked-advanced.resizeonsend.label "Offer to resize image attachments:">
-<!ENTITY shrunked-advanced.resizeonsend.false "when attached">
-<!ENTITY shrunked-advanced.resizeonsend.true "when sending email">
+<!ENTITY shrunked-advanced.resizeonsend.label "Proposer de redimentionner les image en p.j.:">
+<!ENTITY shrunked-advanced.resizeonsend.false "lors de l'ajout au message">
+<!ENTITY shrunked-advanced.resizeonsend.true "lors de l'envoi du mél">
