--- a/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/ca/messages.json
+++ b/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/ca/messages.json
@@ -83,6 +83,9 @@
     "error_401": {
         "message": "L'inici de sessió ha fallat. Comprova l'usuari i la clau."
     },
+    "error_503": {
+        "message": "El servei es troba en mode de manteniment. Torna-ho a provar més tard."
+    },
     "error_sharing_off": {
         "message": "La compartició d'arxius està desactivada. Demana a l'administrador per activar-la."
     },
@@ -134,6 +137,9 @@
     "status_sharing": {
         "message": "Compartint"
     },
+    "status_checkingspace": {
+        "message": "Comprovant l'espai lliure"
+    },
     "status_error": {
         "message": "error: $1"
     },
@@ -142,5 +148,8 @@
     },
     "warn_nonascii_password": {
         "message": "La clau conté caràcters que poden donar problemes a l'accedir. Fes servir una clau d'aplicació en el seu lloc."
+    },
+    "advanced_options": {
+        "message": "Opcions avançades"
     }
 }
