--- a/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/de/messages.json
+++ b/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/de/messages.json
@@ -35,14 +35,17 @@
   "storageFolder_details": {
     "message": "Das Verzeichnis, in dem die Dateien abgelegt werden. Falls es nicht existiert, wird es automatisch angelegt."
   },
+  "downloadPasswords": {
+    "message": "Download-Passwörter"
+  },
+  "useNoDlPassword_details": {
+    "message": "Downloads sind ohne Passwort zugänglich"
+  },
   "useDlPassword": {
     "message": "Download-Passwörter"
   },
   "useNoDlPassword": {
     "message": "Kein Passwort"
-  },
-  "useNoDlPassword_details": {
-    "message": "Downloads sind ohne Passwort zugänglich"
   },
   "oneDlPassword": {
     "message": "Ein Passwort für alle Downloads"
@@ -95,6 +98,9 @@
   "error_401": {
     "message": "Login fehlgeschlagen. Wahrscheinlich ist der Username oder das Passwort falsch."
   },
+  "error_503": {
+    "message": "Server ist im Warungsmodus. Versuch es später wieder."
+  },
   "error_typeerror": {
     "message": "Keine Verbindung zur Cloud. Prüfe die Server-URL und deine Netzwerkverbindung"
   },
@@ -138,6 +144,9 @@
   "status_sharing": {
     "message": "Teilen"
   },
+  "status_checkingspace": {
+    "message": "Speicherplatz prüfen"
+  },
   "status_password": {
     "message": "Passwort: $1"
   },
@@ -147,5 +156,8 @@
   },
   "warn_nonascii_password": {
     "message": "Das Passwort enthält Zeichen, die oft Loginprobleme verursachen. Benutze hier besser ein App-Passwort (unter \"Sicherheit\" in den Einstellunten deiner Cloud)."
+  },
+  "advanced_options": {
+    "message": "Erweiterte Optionen"
   }
 }
