--- a/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/es/messages.json
+++ b/xall/x68/987761-filelink-nextcloud-owncloud/src/_locales/es/messages.json
@@ -83,6 +83,9 @@
     "error_401": {
         "message": "El inicio de sessión falló. Comprueba el usuario y la contraseña."
     },
+    "error_503": {
+        "message": "El servidor está en modo de manrtenimiento. Vuelve a probar más tarde."
+    },
     "error_sharing_off": {
         "message": "La compartición de archivos está deshabilitada. Pide a tu administrador que la habilite."
     },
@@ -105,8 +108,7 @@
         "message": "Una contraseña para todas las descargas"
     },
     "useGeneratedDlPassword": {
-        "message": "Usa una contraseña generada",
-        "description": "ToDo "
+        "message": "Usa una contraseña generada"
     },
     "useGeneratedDlPassword_details": {
         "message": "Se genera una contraseña aleatoria para cada descarga. Cópiala de la notificación del estado después de la carga."
@@ -135,6 +137,9 @@
     "status_sharing": {
         "message": "Compartiendo"
     },
+    "status_checkingspace": {
+        "message": "Comprobando el espacio libre"
+    },
     "status_error": {
         "message": "Error : $1"
     },
@@ -143,5 +148,8 @@
     },
     "warn_nonascii_password": {
         "message": "La contraseña contiene caracteres que pueden causar problemas. Usa una contraseña de aplicación en su lugar."
+    },
+    "advanced_options": {
+        "message": "Opciones Avanzadas"
     }
 }
