--- a/xall/x68/987848-kundenmeister-mail-export/src/_locales/en/messages.json
+++ b/xall/x68/987848-kundenmeister-mail-export/src/_locales/en/messages.json
@@ -1,8 +1,8 @@
 {
   "extensionDescription": {
-    "message": "Addon for KundenMeister Authentication"
+    "message": "An mail export add-on from KundenMeister."
   },
   "extensionName": {
-    "message": "KundenMeister"
+    "message": "KundenMeister CRM Mail Export"
   }
 }
