--- a/xall/x68/2299-threadkey/src/_locales/de/messages.json
+++ b/xall/x68/2299-threadkey/src/_locales/de/messages.json
@@ -4,6 +4,51 @@
     "description": "If you do translate this string, please append the original add-on name in parenthesis: (ThreadKey)"
   },
   "extensionDescription": {
-    "message": "Drücken Sie Taste ‚T‘ um nach Thema zu gruppieren, ‚U‘ um nicht zu gruppieren, ‚G‘ um nach Sortierung zu gruppieren."
+    "message": "Drücken Sie Taste T um nach Thema zu gruppieren, U um nicht zu gruppieren, G um nach Sortierung zu gruppieren."
+  },
+  "threadSortCmd.key": {
+    "message": "T"
+  },
+  "threadSortCmd.modifiers": {
+    "message": ""
+  },
+  "unthreadSortCmd.key": {
+    "message": "U"
+  },
+  "unthreadSortCmd.modifiers": {
+    "message": ""
+  },
+  "groupBySortCmd.key": {
+    "message": "G"
+  },
+  "groupBySortCmd.modifiers": {
+    "message": ""
+  },
+  "overrideKey1.id": {
+    "message": "key_nextUnreadThread"
+  },
+  "overrideKey1.key": {
+    "message": "T"
+  },
+  "overrideKey1.modifiers": {
+    "message": "shift"
+  },
+  "overrideKey2.id": {
+    "message": ""
+  },
+  "overrideKey2.key": {
+    "message": ""
+  },
+  "overrideKey2.modifiers": {
+    "message": ""
+  },
+  "overrideKey3.id": {
+    "message": ""
+  },
+  "overrideKey3.key": {
+    "message": ""
+  },
+  "overrideKey3.modifiers": {
+    "message": ""
   }
 }
