--- a/xall/x68/2299-threadkey/src/_locales/fr/messages.json
+++ b/xall/x68/2299-threadkey/src/_locales/fr/messages.json
@@ -4,6 +4,51 @@
     "description": "If you do translate this string, please append the original add-on name in parenthesis: (ThreadKey)"
   },
   "extensionDescription": {
-    "message": "Tapez sur la touche « T » pour classer les messages par fil de discussion, et la touche « U » pour revenir à leur état précédent non-trié, tout comme la touche « G » permet de les classer par groupes."
+    "message": "Tapez sur la touche «&nbsp;T&nbsp;» pour classer les messages par fil de discussion, et la touche «&nbsp;U&nbsp;» pour revenir à leur état précédent non-trié, tout comme la touche «&nbsp;G&nbsp;» permet de les classer par groupes."
+  },
+  "threadSortCmd.key": {
+    "message": "T"
+  },
+  "threadSortCmd.modifiers": {
+    "message": ""
+  },
+  "unthreadSortCmd.key": {
+    "message": "U"
+  },
+  "unthreadSortCmd.modifiers": {
+    "message": ""
+  },
+  "groupBySortCmd.key": {
+    "message": "G"
+  },
+  "groupBySortCmd.modifiers": {
+    "message": ""
+  },
+  "overrideKey1.id": {
+    "message": "key_nextUnreadThread"
+  },
+  "overrideKey1.key": {
+    "message": "T"
+  },
+  "overrideKey1.modifiers": {
+    "message": "shift"
+  },
+  "overrideKey2.id": {
+    "message": ""
+  },
+  "overrideKey2.key": {
+    "message": ""
+  },
+  "overrideKey2.modifiers": {
+    "message": ""
+  },
+  "overrideKey3.id": {
+    "message": ""
+  },
+  "overrideKey3.key": {
+    "message": ""
+  },
+  "overrideKey3.modifiers": {
+    "message": ""
   }
 }
