--- a/xall/x68/2299-threadkey/src/_locales/en/messages.json
+++ b/xall/x68/2299-threadkey/src/_locales/en/messages.json
@@ -5,5 +5,50 @@
   },
   "extensionDescription": {
     "message": "Strike the 'T' key to sort messages by thread, strike the 'U' key to sort them unthreaded again, just like the 'G' key switches to Grouped By Sort view."
+  },
+  "threadSortCmd.key": {
+    "message": "T"
+  },
+  "threadSortCmd.modifiers": {
+    "message": ""
+  },
+  "unthreadSortCmd.key": {
+    "message": "U"
+  },
+  "unthreadSortCmd.modifiers": {
+    "message": ""
+  },
+  "groupBySortCmd.key": {
+    "message": "G"
+  },
+  "groupBySortCmd.modifiers": {
+    "message": ""
+  },
+  "overrideKey1.id": {
+    "message": "key_nextUnreadThread"
+  },
+  "overrideKey1.key": {
+    "message": "T"
+  },
+  "overrideKey1.modifiers": {
+    "message": "shift"
+  },
+  "overrideKey2.id": {
+    "message": ""
+  },
+  "overrideKey2.key": {
+    "message": ""
+  },
+  "overrideKey2.modifiers": {
+    "message": ""
+  },
+  "overrideKey3.id": {
+    "message": ""
+  },
+  "overrideKey3.key": {
+    "message": ""
+  },
+  "overrideKey3.modifiers": {
+    "message": ""
   }
 }
