--- a/xall/x68/2299-threadkey/src/_locales/sr/messages.json
+++ b/xall/x68/2299-threadkey/src/_locales/sr/messages.json
@@ -5,5 +5,50 @@
   },
   "extensionDescription": {
     "message": "Притисните „Т” да бисте поредали поруке по теми, типку „У” да вратите уобичајени распоред или „Г” за приказ по групама."
+  },
+  "threadSortCmd.key": {
+    "message": "T"
+  },
+  "threadSortCmd.modifiers": {
+    "message": ""
+  },
+  "unthreadSortCmd.key": {
+    "message": "U"
+  },
+  "unthreadSortCmd.modifiers": {
+    "message": ""
+  },
+  "groupBySortCmd.key": {
+    "message": "G"
+  },
+  "groupBySortCmd.modifiers": {
+    "message": ""
+  },
+  "overrideKey1.id": {
+    "message": "key_nextUnreadThread"
+  },
+  "overrideKey1.key": {
+    "message": "T"
+  },
+  "overrideKey1.modifiers": {
+    "message": "shift"
+  },
+  "overrideKey2.id": {
+    "message": ""
+  },
+  "overrideKey2.key": {
+    "message": ""
+  },
+  "overrideKey2.modifiers": {
+    "message": ""
+  },
+  "overrideKey3.id": {
+    "message": ""
+  },
+  "overrideKey3.key": {
+    "message": ""
+  },
+  "overrideKey3.modifiers": {
+    "message": ""
   }
 }
