--- a/xall/x68/2299-threadkey/src/_locales/sv-SE/messages.json
+++ b/xall/x68/2299-threadkey/src/_locales/sv-SE/messages.json
@@ -5,5 +5,50 @@
   },
   "extensionDescription": {
     "message": "Tryck ned T-tangenten för att sortera meddelanden efter tråd, tryck ned U-tangenten för att sortera dem otrådade/ogrupperade igen."
+  },
+  "threadSortCmd.key": {
+    "message": "T"
+  },
+  "threadSortCmd.modifiers": {
+    "message": ""
+  },
+  "unthreadSortCmd.key": {
+    "message": "U"
+  },
+  "unthreadSortCmd.modifiers": {
+    "message": ""
+  },
+  "groupBySortCmd.key": {
+    "message": "G"
+  },
+  "groupBySortCmd.modifiers": {
+    "message": ""
+  },
+  "overrideKey1.id": {
+    "message": "key_nextUnreadThread"
+  },
+  "overrideKey1.key": {
+    "message": "T"
+  },
+  "overrideKey1.modifiers": {
+    "message": "shift"
+  },
+  "overrideKey2.id": {
+    "message": ""
+  },
+  "overrideKey2.key": {
+    "message": ""
+  },
+  "overrideKey2.modifiers": {
+    "message": ""
+  },
+  "overrideKey3.id": {
+    "message": ""
+  },
+  "overrideKey3.key": {
+    "message": ""
+  },
+  "overrideKey3.modifiers": {
+    "message": ""
   }
 }
