--- a/xall/x68/987823-autobucket/src/_locales/en/messages.json
+++ b/xall/x68/987823-autobucket/src/_locales/en/messages.json
@@ -52,5 +52,9 @@
   "clearSettingMenu": {
     "message": "Clear learning status and settings",
     "description": "Menu Text"
+  },
+  "infoNotSetting": {
+    "message": "First, set the tag on the extension setting screen and press the save button.",
+    "description": "Notification Message"
   }
 }
