--- a/xall/x68/987823-autobucket/src/_locales/ja/messages.json
+++ b/xall/x68/987823-autobucket/src/_locales/ja/messages.json
@@ -52,5 +52,9 @@
   "clearSettingMenu": {
     "message": "学習状況と設定をクリア",
     "description": "メニュー文言"
+  },
+  "infoNotSetting": {
+    "message": "最初に拡張機能の設定画面でタグの設定をして保存ボタンを押してください",
+    "description": "通知メッセージ"
   }
 }
