--- a/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
+++ b/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
@@ -5,6 +5,9 @@ Created by: Christian Weiske <cweiske@cweiske.de>
 Further development by: Juergen Ernst <dispmua@juergen-ernst.de>
 Forked by: Toshi_ <dispmua@outlook.com>
 
+2.0.3 2020-7-25
+- Some more icon(2044 now)
+
 2.0.2 2020-7-22
 - Some more icon(2041 now)
 
