--- a/xall/x68/987783-compact-headers/src/changelog.txt
+++ b/xall/x68/987783-compact-headers/src/changelog.txt
@@ -1,11 +1,21 @@
 Changelog for Compact Headers
 
+2.3
+Added option (in context menu) to display headers on a single line.
+
+2.2
+Added Compact Headers to messages opened in new windows.
+Use onShutdown() instead of close() for uninstall & disable.
+Added a workaround for a bug not hiding all headers in view all headers.
+Added context menu to the main header area (view all/normal headers).
+Dropped support for versions older than Thunderbird 78.
+
 2.1
 Added shortcut key [Alt-D].
 
 2.0
-Added twisty.
-Removed toolbarbutton.
+Added twisty to the header area.
+Removed the toolbarbutton.
 Fixed uninstall & disable.
 
 1.2
