--- a/xall/x68/987823-autobucket/src/_locales/en/messages.json
+++ b/xall/x68/987823-autobucket/src/_locales/en/messages.json
@@ -54,7 +54,7 @@
     "description": "Menu Text"
   },
   "infoNotSetting": {
-    "message": "First, set the tag on the extension setting screen and press the save button.",
+    "message": "First, set the tag on the extended function setting screen and press the save button to complete the initial settings. Or it takes a long time to load the settings.",
     "description": "Notification Message"
   }
 }
