--- a/xall/x68/987823-autobucket/src/_locales/ja/messages.json
+++ b/xall/x68/987823-autobucket/src/_locales/ja/messages.json
@@ -54,7 +54,7 @@
     "description": "メニュー文言"
   },
   "infoNotSetting": {
-    "message": "最初に拡張機能の設定画面でタグの設定をして保存ボタンを押してください",
+    "message": "最初に拡張機能の設定画面でタグの設定をして保存ボタンを押して初期設定を完了させてください。もしくは設定の読み込みに時間が掛かっています。",
     "description": "通知メッセージ"
   }
 }
