--- a/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
+++ b/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
@@ -5,6 +5,32 @@ Created by: Christian Weiske <cweiske@cweiske.de>
 Further development by: Juergen Ernst <dispmua@juergen-ernst.de>
 Forked by: Toshi_ <dispmua@outlook.com>
 
+2.0.11 2020-8-12
+- Some more icon(2054 now)
+
+2.0.10 2020-8-6
+- Added user-agent string
+
+2.0.9 2020-8-5
+- Some more icon(2052 now)
+
+2.0.8 2020-8-5
+- Some more icon(2051 now)
+
+2.0.7 2020-8-3
+- Some more icon(2050 now)
+- Changed one icon
+- Added disable and uninstall process
+
+2.0.6 2020-7-29
+- Some more icon(2047 now)
+
+2.0.5 2020-7-29
+- Some more icon(2046 now)
+
+2.0.4 2020-7-27
+- Some more icon(2045 now)
+
 2.0.3 2020-7-25
 - Some more icon(2044 now)
 
